<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryGame">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/beforeGame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:id="@+id/startTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                style="@style/editTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.slider.Slider
                android:id="@+id/rangeSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/startTxt"
                android:layout_marginTop="12dp"
                android:valueFrom="2"
                android:valueTo="5"
                android:stepSize="1" />

            <TextView
                android:id="@+id/selectedLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rangeSlider"/>

            <Button
                android:id="@+id/startGameBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:layout_marginBottom="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/afterGame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/scoreBoard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:text="Correct -- | Incorrect --"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/purple_700"
            android:textStyle="bold|italic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/digitTxt"
            android:layout_width="80dp"
            android:layout_height="80dp"
            style="@style/editTextStyle"
            android:text="2"
            android:textSize="46dp"
            android:gravity="center"
            android:background="@drawable/box_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/output"/>

        <EditText
            android:id="@+id/output"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/submitAns"
            app:layout_constraintTop_toBottomOf="@+id/digitTxt"
            app:layout_constraintBottom_toTopOf="@+id/playAgain"/>

        <Button
            android:id="@+id/submitAns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="@+id/output"
            app:layout_constraintStart_toEndOf="@+id/output"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/playAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/output"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/endGame"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/endGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game"
            app:layout_constraintTop_toTopOf="@+id/playAgain"
            app:layout_constraintStart_toEndOf="@+id/playAgain"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
